// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert to match snapshot [type: "danger"] 1`] = `
<DocumentFragment>
  <div
    class="mb-4 border p-0 d-flex c-toast alert alert-danger alert-dismissible fade"
    role="alert"
  >
    <button
      aria-label="Close"
      class="close"
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
    <div
      class="toast-icon d-flex align-items-center"
    >
      <i
        aria-hidden="true"
      >
        <svg
          class="d-block"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 192 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M176 432c0 44.112-35.888 80-80 80s-80-35.888-80-80 35.888-80 80-80 80 35.888 80 80zM25.26 25.199l13.6 272C39.499 309.972 50.041 320 62.83 320h66.34c12.789 0 23.331-10.028 23.97-22.801l13.6-272C167.425 11.49 156.496 0 142.77 0H49.23C35.504 0 24.575 11.49 25.26 25.199z"
          />
        </svg>
      </i>
    </div>
    <div
      class="toast-body px-3 py-2 flex-grow-1"
    >
      <h4
        class="toast-heading d-inline-block h6 mb-0"
      >
        title
      </h4>
      <div
        class="d-inline-block"
      >
        message
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert to match snapshot [type: "info"] 1`] = `
<DocumentFragment>
  <div
    class="mb-4 border p-0 d-flex c-toast alert alert-info alert-dismissible fade"
    role="alert"
  >
    <button
      aria-label="Close"
      class="close"
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
    <div
      class="toast-icon d-flex align-items-center"
    >
      <i
        aria-hidden="true"
      >
        <svg
          class="d-block"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 192 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 424.229h20V279.771H20c-11.046 0-20-8.954-20-20V212c0-11.046 8.954-20 20-20h112c11.046 0 20 8.954 20 20v212.229h20c11.046 0 20 8.954 20 20V492c0 11.046-8.954 20-20 20H20c-11.046 0-20-8.954-20-20v-47.771c0-11.046 8.954-20 20-20zM96 0C56.235 0 24 32.235 24 72s32.235 72 72 72 72-32.235 72-72S135.764 0 96 0z"
          />
        </svg>
      </i>
    </div>
    <div
      class="toast-body px-3 py-2 flex-grow-1"
    >
      <h4
        class="toast-heading d-inline-block h6 mb-0"
      >
        title
      </h4>
      <div
        class="d-inline-block"
      >
        message
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert to match snapshot [type: "success"] 1`] = `
<DocumentFragment>
  <div
    class="mb-4 border p-0 d-flex c-toast alert alert-success alert-dismissible fade"
    role="alert"
  >
    <button
      aria-label="Close"
      class="close"
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
    <div
      class="toast-icon d-flex align-items-center"
    >
      <i
        aria-hidden="true"
      >
        <svg
          class="d-block"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
          />
        </svg>
      </i>
    </div>
    <div
      class="toast-body px-3 py-2 flex-grow-1"
    >
      <h4
        class="toast-heading d-inline-block h6 mb-0"
      >
        title
      </h4>
      <div
        class="d-inline-block"
      >
        message
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert to match snapshot [type: "warning"] 1`] = `
<DocumentFragment>
  <div
    class="mb-4 border p-0 d-flex c-toast alert alert-warning alert-dismissible fade"
    role="alert"
  >
    <button
      aria-label="Close"
      class="close"
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
    <div
      class="toast-icon d-flex align-items-center"
    >
      <i
        aria-hidden="true"
      >
        <svg
          class="d-block"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 576 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
          />
        </svg>
      </i>
    </div>
    <div
      class="toast-body px-3 py-2 flex-grow-1"
    >
      <h4
        class="toast-heading d-inline-block h6 mb-0"
      >
        title
      </h4>
      <div
        class="d-inline-block"
      >
        message
      </div>
    </div>
  </div>
</DocumentFragment>
`;
